kube-envoy/envoy-jaeger/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp1
spec:
 #clusterIP: None      
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8090
  selector:
    app: myapp1
---
apiVersion: v1
kind: Service
metadata:
  name: myapp2
spec:
 #clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8091
  selector:
    app: myapp2
