kube-envoy/envoy-jaeger/envoy-jaeger-cm.yml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: service1-envoy-cm
  namespace: default
data:
  envoy.yaml: >
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8090
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              tracing:
                operation_name: ingress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: service1_route
                virtual_hosts:
                - name: service1
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
                    decorator:
                      operation: checkAvailability
              http_filters:
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: local_service
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: local_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8080
      - name: jaeger
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        dns_lookup_family: V4_ONLY
        hosts: [{ socket_address: { address: zipkin, port_value: 9411 }}]
    tracing:
      http:
        name: envoy.zipkin
        typed_config:
          "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
          collector_cluster: jaeger
          collector_endpoint: "/api/v1/spans"
          shared_span_context: false
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: service2-envoy-cm
  namespace: default
data:
  envoy.yaml: >
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8091
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              tracing:
                operation_name: ingress
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: service1_route
                virtual_hosts:
                - name: service2
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: local_service
                    decorator:
                      operation: checkAvailability
              http_filters:
              - name: envoy.router
                typed_config: {}
      clusters:
      - name: local_service
        connect_timeout: 0.250s
        type: strict_dns
        lb_policy: round_robin
        load_assignment:
          cluster_name: local_service
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 8090
      - name: jaeger
        connect_timeout: 1s
        type: strict_dns
        lb_policy: round_robin
        dns_lookup_family: V4_ONLY
        hosts: [{ socket_address: { address: zipkin, port_value: 9411 }}]
    tracing:
      http:
        name: envoy.zipkin
        typed_config:
          "@type": type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
          collector_cluster: jaeger
          collector_endpoint: "/api/v1/spans"
          shared_span_context: false
    admin:
      access_log_path: "/dev/null"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
